--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.0.0",
     "jotai": "^1.10.0",
+    "koa": "^2.14.1",
+    "koa-router": "^12.0.0",
     "next": "^13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.9.0",
+    "tsrpc-browser": "^3.4.11",
+    "undici": "^5.21.0"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.4",
