--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "ethos-connect": "^0.0.106",
     "framer-motion": "^10.0.0",
     "jotai": "^1.10.0",
     "koa": "^2.14.1",
