--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mysten/sui.js": "^0.30.0",
     "clsx": "^1.2.1",
-    "ethos-connect": "^0.0.106",
+    "ethos-connect": "^0.0.119",
     "framer-motion": "^10.0.0",
     "jotai": "^1.10.0",
     "koa": "^2.14.1",
